--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>English excellence</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <load ="partials/header.html" />
-
-    <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <load ="partials/hero.html" />
+    <load ="partials/about-us.html" />
+    <load ="partials/lessons.html" />
+    <load ="partials/proposal.html" />
+    <load ="partials/teachers.html" />
+    <load ="partials/leave.html" />
+    <load ="partials/reviews.html" />
+    <load ="partials/footer.html" />
 
     <script type="module" src="/main.js"></script>
   </body>
