--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     <load ="partials/header.html" />
     <load ="partials/hero.html" />
     <load ="partials/about-us.html" />
-    <load ="./partials/lessons.html" />
+    <load ="partials/lessons.html" />
     <load ="partials/proposal.html" />
     <load ="partials/teachers.html" />
     <load ="partials/leave.html" />
