feat: add markup and styles for meat our team section

--- a/src/team.html
+++ b/src/team.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>English excellence</title>
+    <title>Team | English excellence</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,16 +22,9 @@
   </head>
   <body>
     <load ="partials/header.html" />
-    <load ="partials/hero.html" />
-    <load ="partials/about-us.html" />
-    <load ="partials/lessons.html" />
-    <load ="partials/proposal.html" />
-    <load ="partials/teachers.html" />
-    <load ="partials/leave.html" />
-    <load ="partials/reviews.html" />
+    <load ="partials/team.html" />
     <load ="partials/footer.html" />
 
-    <a href="team.html">TEAM</a>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
