added heade/styles for mobile wasn't completed

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
   </head>
   <body>
     <load ="partials/header.html" />
+    <load ="partials/modal.html" />
     <load ="partials/hero.html" />
     <load ="partials/about-us.html" />
     <load ="partials/lessons.html" />
