--- a/src/team.html
+++ b/src/team.html
@@ -22,6 +22,7 @@
   </head>
   <body>
     <load ="partials/header.html" />
+    <load ="partials/modal.html" />
     <load ="partials/team.html" />
     <load ="partials/footer.html" />
 
