--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,12 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+    />
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
   </head>
   <body>
     <load ="partials/header.html" />
@@ -31,6 +37,7 @@
     <load ="partials/leave.html" />
     <load ="partials/reviews.html" />
     <load ="partials/footer.html" />
+    <load ="partials/scroll-up.html" />
     <load ="partials/scroll-up.html" />
 
     <script type="module" src="/main.js"></script>
