fix: add optimization to scripts and styles

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="English excellence" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>English excellence</title>
@@ -11,33 +12,22 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
-      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
     <link rel="stylesheet" href="./css/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
-    />
-
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
   </head>
+
   <body>
     <load ="partials/header.html" />
     <load ="partials/modal.html" />
-    <load ="partials/hero.html" />
-    <load ="partials/about-us.html" />
-    <load ="partials/lessons.html" />
-    <load ="partials/proposal.html" />
-    <load ="partials/teachers.html" />
-    <load ="partials/leave.html" />
-    <load ="partials/reviews.html" />
+    <main>
+      <load ="partials/hero.html" />
+      <load ="partials/about-us.html" />
+      <load ="partials/lessons.html" />
+      <load ="partials/proposal.html" />
+      <load ="partials/teachers.html" />
+      <load ="partials/leave.html" />
+      <load ="partials/reviews.html" />
+    </main>
     <load ="partials/footer.html" />
-    <load ="partials/scroll-up.html" />
     <load ="partials/scroll-up.html" />
 
     <script type="module" src="/main.js"></script>
