--- a/src/team.html
+++ b/src/team.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Team | English excellence" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Team | English excellence</title>
@@ -11,22 +12,19 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
-      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
     <load ="partials/header.html" />
-    <load ="partials/modal.html" />
-    <load ="partials/team.html" />
+    <main>
+      <load ="partials/modal.html" />
+      <load ="partials/team.html" />
+    </main>
     <load ="partials/footer.html" />
     <load ="partials/scroll-up.html" />
 
+    <script type="module" src="./js/team.js"></script>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
